--- a/package.json
+++ b/package.json
@@ -29,11 +29,18 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "build:tailwind": "postcss src/tailwind.css -o src/tailwind.output.css",
+    "start": "react-scripts start",
+    "build": "react-scripts build", 
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
+    // "start": "craco start",
+    // "build": "craco build",
+    // "test": "craco test",
+    // "build:tailwind": "postcss src/tailwind.css -o src/tailwind.output.css",
+
+
+
+
   },
   "eslintConfig": {
     "extends": [
